--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -23627,8 +23627,8 @@ bilibili	blbl
 飞入	fnrm
 发软	fnrs
 愤然	fnrv
-富饶	fnrw
 愤然	fnrw
+富饶	fnrw
 飞石	fnsa
 发梢	fnsc
 飞洒	fnsd
@@ -43298,9 +43298,8 @@ GPRS	gprs
 尊师重道	isid
 转折点	isid
 转注	isid
-至真	isif
-转正	isif
 转载	isif
+转正	isif
 重赏之下必有勇夫	isif
 重赏之下，必有勇夫	isif
 自说自话	isih
@@ -43575,9 +43574,8 @@ GPRS	gprs
 尊师重道	iszd
 转折点	iszd
 转注	iszd
-至真	iszf
-转正	iszf
 转载	iszf
+转正	iszf
 重赏之下必有勇夫	iszf
 重赏之下，必有勇夫	iszf
 自说自话	iszh
@@ -44008,7 +44006,6 @@ GPRS	gprs
 篆	itxa
 长相	itxc
 种系	itxe
-乍现	itxg
 造型	itxg
 重型	itxg
 整体下滑	itxh
@@ -53822,7 +53819,6 @@ GPRS	gprs
 金文	jywh
 军用物资	jywi
 激扬文字	jywi
-机要文件	jywj
 键位	jywj
 金乌	jyww
 军用物资	jywz
@@ -55440,6 +55436,7 @@ GPRS	gprs
 嗑瓜子	kigz
 咳	kih
 跨海	kihd
+口嗨	kihd
 口惠	kihf
 口号	kihi
 哭喊	kihi
@@ -57335,6 +57332,7 @@ GPRS	gprs
 铠	kyob
 锞	kyok
 卡片	kypr
+卡牌	kypr
 抗压强度	kyqd
 肯去	kyqu
 铿锵	kyqy
@@ -58726,6 +58724,7 @@ GPRS	gprs
 老兵	lfbr
 流芳百世	lfbs
 老不死	lfbs
+两笔	lfbt
 老半天	lfbt
 两不误	lfbw
 老鸨	lfbw
@@ -98043,8 +98042,8 @@ GPRS	gprs
 皮肤护理	pfhl
 平方毫米	pfhm
 剽悍	pfhn
-蚍蜉撼树	pfhs
 配好	pfhs
+蚍蜉撼树	pfhs
 飘忽	pfhw
 飘红	pfhx
 飘在	pfia
@@ -101750,6 +101749,7 @@ GPRS	gprs
 巧干	qfgg
 靬	qfgi
 娶个	qfgj
+取关	qfgm
 求购	qfgo
 奇峰怪石	qfgs
 求告	qfgt
@@ -106781,7 +106781,7 @@ QQ密码	qqmm
 人物画	rjwh
 人问	rjwj
 任务栏	rjwl
-仍为	rjwm
+人为	rjwm
 人物	rjwt
 人卫	rjwv
 任务	rjww
@@ -107950,8 +107950,8 @@ QQ密码	qqmm
 如数家珍	rsji
 如旧	rsji
 软件站	rsji
-如今	rsjj
 软件	rsjj
+如今	rsjj
 如家	rsjn
 软胶囊	rsjn
 软键盘	rsjp
@@ -112051,11 +112051,10 @@ QQ密码	qqmm
 捎带	skdf
 手动	skdg
 时刻都在	skdi
-捎带脚	skdj
 摔倒	skdj
-拾掇	skdk
 摔打	skdk
 撕掉	skdk
+拾掇	skdk
 摔断	skdm
 手电	skdo
 手段	skdr
@@ -123740,6 +123739,7 @@ QQ密码	qqmm
 巧干	ufgg
 靬	ufgi
 娶个	ufgj
+取关	ufgm
 求购	ufgo
 奇峰怪石	ufgs
 求告	ufgt
@@ -137083,10 +137083,10 @@ Z	vyz
 悬雍垂	xoyc
 岫玉	xoyg
 县衙	xoyk
-岫岩	xoyo
 悬崖	xoyo
-瞎眼	xoyo
 蜥蜴	xoyo
+瞎眼	xoyo
+岫岩	xoyo
 眩晕	xoyr
 巇	xoys
 县域	xoyu
@@ -155431,7 +155431,6 @@ Z	vyz
 篆	ztxa
 长相	ztxc
 种系	ztxe
-乍现	ztxg
 造型	ztxg
 重型	ztxg
 整体下滑	ztxh
