--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -4440,6 +4440,7 @@ bilibili	blbl
 爸爸	bmbm
 半边	bmbn
 闭门不纳	bmbn
+并不是	bmbs
 半边天	bmbt
 半包围	bmbw
 不眠不休	bmbx
@@ -6847,10 +6848,7 @@ bilibili	blbl
 北镇	byiy
 悲剧	byjb
 镖局	byjb
-便衣警察	byjc
-北京城	byjc
 北极	byjc
-奔逸绝尘	byjc
 北极光	byjg
 步进	byjg
 北京	byjh
@@ -26834,6 +26832,7 @@ bilibili	blbl
 更加	gfjn
 工具	gfjo
 更近	gfjq
+工具人	gfjr
 工匠	gfjs
 工具书	gfjs
 古籍	gfjt
@@ -52388,9 +52387,9 @@ GPRS	gprs
 际	jvg
 降格	jvgc
 肌酐	jvgf
-肼	jvgi
 脚跟	jvgi
 阱	jvgi
+肼	jvgi
 际	jvgk
 胫骨	jvgo
 胶管	jvgt
@@ -52407,7 +52406,6 @@ GPRS	gprs
 脚注	jvid
 降职	jvif
 脚趾	jvii
-胶粘剂	jvij
 脚掌	jvij
 脚趾甲	jvij
 祭祖	jvil
@@ -52553,7 +52551,6 @@ GPRS	gprs
 脚注	jvzd
 降职	jvzf
 脚趾	jvzi
-胶粘剂	jvzj
 脚掌	jvzj
 脚趾甲	jvzj
 祭祖	jvzl
@@ -53621,6 +53618,7 @@ GPRS	gprs
 金枝	jyic
 金针菜	jyic
 金针菇	jyig
+金主	jyih
 金装	jyih
 九阴真经	jyij
 金质奖	jyij
@@ -55436,10 +55434,10 @@ GPRS	gprs
 嗑瓜子	kigz
 咳	kih
 跨海	kihd
-口嗨	kihd
 口惠	kihf
 口号	kihi
 哭喊	kihi
+口嗨	kihi
 口含	kihj
 跨行	kihk
 吭	kihw
@@ -61748,7 +61746,7 @@ GPRS	gprs
 连带	lsdf
 轮动	lsdg
 劳师动众	lsdi
-量身定做	lsdi
+量身定制	lsdi
 联手打击	lsdj
 连读	lsdl
 理所当然	lsdr
@@ -69918,6 +69916,7 @@ GPRS	gprs
 内政	noif
 内酯	noif
 男子汉	noih
+男主	noih
 男装	noih
 男足	noii
 内债	noij
@@ -69981,6 +69980,7 @@ GPRS	gprs
 囡囡	nono
 男女	nons
 内胚层	nopc
+男配	nopf
 男仆	nopj
 男排	nopk
 内皮	nopn
@@ -70084,6 +70084,7 @@ GPRS	gprs
 内政	nozf
 内酯	nozf
 男子汉	nozh
+男主	nozh
 男装	nozh
 男足	nozi
 内债	nozj
@@ -70281,6 +70282,7 @@ GPRS	gprs
 女真	nsif
 女职工	nsig
 女装	nsih
+女主	nsih
 努嘴	nsii
 女贞子	nsii
 女足	nsii
@@ -70367,6 +70369,7 @@ GPRS	gprs
 能上能下	nsnx
 胬	nso
 胬	nsok
+女配	nspf
 逆市飘红	nsph
 奶品	nspi
 奴仆	nspj
@@ -98753,6 +98756,7 @@ GPRS	gprs
 佩剑	pjjj
 凭借	pjjj
 凭据	pjjk
+仆街	pjjk
 偏见	pjjo
 偏角	pjjw
 普及教育	pjjy
@@ -109416,9 +109420,9 @@ QQ密码	qqmm
 水滴	sddd
 水电费	sddf
 涉毒	sddg
-水底	sddh
 深度	sddh
 湿度	sddh
+水底	sddh
 水电站	sddi
 水电局	sddj
 沙袋	sddj
@@ -109540,8 +109544,8 @@ QQ密码	qqmm
 深知	sdit
 深造	sdit
 深重	sdit
-水蒸汽	sdiu
 深圳	sdiu
+水蒸汽	sdiu
 水肿	sdiv
 沙子	sdiv
 师道尊严	sdiy
@@ -110744,8 +110748,7 @@ QQ密码	qqmm
 三姑六婆	sglp
 疏肝理气	sglq
 苏格兰人	sglr
-三联单	sgls
-三轮	sgls
+三连	sgls
 三里屯	sglt
 疏肝理气	sglu
 瘦骨嶙峋	sglx
@@ -135573,6 +135576,7 @@ Z	vyz
 斜睨	xjno
 小脚女人	xjnr
 仙女	xjns
+侠女	xjns
 修女	xjns
 新几内亚	xjny
 仙女座	xjnz
@@ -140175,6 +140179,7 @@ Z	vyz
 原题	yatr
 压塌	yatu
 右腿	yatv
+压腿	yatv
 压条	yatw
 压	yau
 压强	yaub
@@ -148596,7 +148601,7 @@ Z	vyz
 玉殒香消	yyxx
 疑义相与析	yyxx
 银线	yyxx
-咿呀学语	yyxy
+欲扬先抑	yyxy
 牙牙学语	yyxy
 阴阳消长	yyxz
 鱼与熊掌	yyxz
