--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -23642,13 +23642,13 @@ bilibili	blbl
 发现者	fnxi
 发信	fnxj
 飞侠	fnxj
+发行	fnxk
 飞行	fnxk
-发祥	fnxl
 发行量	fnxl
+发祥	fnxl
 飞翔	fnxm
 发小	fnxp
 飞行器	fnxq
-发信人	fnxr
 发行人	fnxr
 飞向	fnxr
 飞絮	fnxs
