--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -58819,9 +58819,9 @@ GPRS	gprs
 老套	lfta
 老汤	lftd
 老头儿	lfte
+聊天	lftg
 两天	lftg
 老天	lftg
-聊天	lftg
 老同志	lfti
 老头子	lfti
 聆听	lfti
@@ -111859,8 +111859,8 @@ QQ密码	qqmm
 扫堂腿	sktt
 撒腿	sktv
 手提箱	sktx
-手枪	skuc
 授权	skuc
+手枪	skuc
 扫清	skud
 撒切尔	skue
 摄取	skuf
@@ -116572,8 +116572,9 @@ QQ密码	qqmm
 上岸	syao
 上半部	sybb
 上臂	sybb
-上半场	sybc
 上榜	sybc
+上标	sybc
+上半场	sybc
 四仰八叉	sybc
 上百	sybd
 说一不二	sybe
@@ -133512,9 +133513,9 @@ Z	vyz
 献爱心	xfax
 巷	xfb
 西北部	xfbb
-下半场	xfbc
 下标	xfbc
 巷	xfbc
+下半场	xfbc
 西北风	xfbf
 下班	xfbg
 西部	xfbh
