--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -28705,8 +28705,8 @@ bilibili	blbl
 关在	gmia
 关张	gmib
 公证处	gmic
-光明正大	gmid
 关注	gmid
+光明正大	gmid
 关贸总协定	gmid
 公正	gmif
 公职	gmif
@@ -104742,6 +104742,7 @@ QQ密码	qqmm
 秋月	qtyv
 签约	qtyx
 千丈	qtza
+千张	qtzb
 乔治敦	qtzd
 气滞	qtzd
 千载	qtzf
@@ -111160,7 +111161,7 @@ QQ密码	qqmm
 神经递质	sjdi
 闪电战	sjdi
 舍得	sjdk
-舍掉	sjdk
+使得	sjdk
 食道	sjdm
 闪电	sjdo
 似的	sjdr
@@ -113448,10 +113449,10 @@ QQ密码	qqmm
 实现	snxg
 实效	snxh
 守信	snxj
-实习课	snxk
 实行	snxk
-实心	snxl
+实习课	snxk
 实习	snxl
+实心	snxl
 审讯	snxl
 善男信女	snxn
 实习期	snxq
@@ -126300,6 +126301,7 @@ QQ密码	qqmm
 氰化物	uthw
 千	uti
 千丈	utia
+千张	utib
 乔治	utid
 乔治敦	utid
 气滞	utid
@@ -126754,8 +126756,8 @@ QQ密码	uumm
 琴棋书画	uush
 娶妻生子	uusi
 却使	uusj
-起誓	uusk
 趋势	uusk
+起誓	uusk
 起诉	uusl
 起身	uusr
 起始	uuss
@@ -133535,11 +133537,10 @@ Z	vyz
 西半球	xfbu
 下巴	xfbv
 下编	xfbx
-下半叶	xfby
-下半夜	xfby
-兴奋不已	xfby
 西北	xfby
 西班牙	xfby
+下半夜	xfby
+兴奋不已	xfby
 下辈子	xfbz
 下边	xfbz
 下厨	xfca
