--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -13352,7 +13352,6 @@ bilibili	blbl
 纯钢	cxgy
 缠	cxh
 纯厚	cxha
-促销活动	cxhd
 巢湖	cxhd
 纯合子	cxhi
 绰号	cxhi
@@ -16399,6 +16398,7 @@ bilibili	blbl
 党史	djso
 担惊受怕	djsp
 当时	djsr
+但是	djsr
 袋鼠	djsr
 当事人	djsr
 代数式	djss
@@ -18889,7 +18889,6 @@ bilibili	blbl
 等高线	dtgx
 大庭广众	dtgz
 笃厚	dtha
-党团活动	dthd
 等会儿	dthe
 等号	dthi
 等会	dthj
@@ -24602,6 +24601,7 @@ bilibili	blbl
 腹稿	fvgt
 防	fvh
 肥厚	fvha
+防化道	fvhd
 防洪	fvhd
 防洪堤	fvhd
 防滑	fvhd
@@ -30968,7 +30968,6 @@ GPRS	gprs
 钢轨	gygs
 钢管	gygt
 镐	gyh
-公益活动	gyhd
 钢花	gyhe
 肝阳化风	gyhf
 镐	gyhi
@@ -31752,7 +31751,6 @@ GPRS	gprs
 海船	hdcq
 河川	hdcr
 华灯初上	hdcs
-活动场所	hdcs
 滑车	hdcs
 海城	hdcu
 滑出	hdcv
@@ -31771,7 +31769,6 @@ GPRS	gprs
 海底	hddh
 海盗	hddh
 汉代	hddj
-活动家	hddj
 滑倒	hddj
 活得	hddk
 混搭	hddk
@@ -32060,7 +32057,6 @@ GPRS	gprs
 画片	hdpr
 活菩萨	hdps
 滑坡	hdpu
-活动评选	hdpx
 海螵蛸	hdpx
 画皮	hdpz
 活棋	hdqc
@@ -35849,9 +35845,9 @@ GPRS	gprs
 互教	hsjf
 好几个	hsjg
 轰击	hsjg
-好上加好	hsjh
-好家伙	hsjh
 或将	hsjh
+好家伙	hsjh
+好上加好	hsjh
 划价	hsjj
 婚介	hsjj
 好极了	hsjl
@@ -36480,7 +36476,6 @@ GPRS	gprs
 环卫工人	hwgr
 昏过去	hwgu
 訇	hwh
-户外活动	hwhd
 昏花	hwhe
 昏黄	hwhf
 訇	hwhi
@@ -38445,6 +38440,7 @@ GPRS	gprs
 髽	ifju
 再降	ifjv
 直角	ifjw
+整句	ifjw
 正经	ifjx
 政绩	ifjx
 再就业	ifjy
@@ -40939,9 +40935,9 @@ GPRS	gprs
 祝福语	ilfy
 之感	ilga
 诸葛	ilge
+之歌	ilgf
 之功	ilgf
 之故	ilgf
-之歌	ilgf
 之高	ilgh
 之光	ilgj
 证供	ilgj
@@ -40958,9 +40954,9 @@ GPRS	gprs
 治理黄河	ilhh
 诈唬	ilhi
 谘	ilhi
-之会	ilhj
-字里行间	ilhj
 诸侯	ilhj
+字里行间	ilhj
+之会	ilhj
 之火	ilhm
 祝贺	ilhn
 之患	ilho
@@ -41014,14 +41010,14 @@ GPRS	gprs
 祝酒歌	iljg
 翟	iljh
 证监会	iljh
-之间	iljj
 证件	iljj
+之间	iljj
 证据	iljk
 之计	iljl
 之家	iljn
 之见	iljo
-袗	iljq
 诊	iljq
+袗	iljq
 之巨	iljs
 祖籍	iljt
 之境	ilju
@@ -41155,8 +41151,8 @@ GPRS	gprs
 祚	iltd
 之痛	ilth
 之叹	ilti
-之体	iltj
 崭露头角	iltj
+之体	iltj
 诛	iltk
 之谈	iltl
 之强	ilub
@@ -41172,6 +41168,7 @@ GPRS	gprs
 之情	ilun
 专利权人	ilur
 之躯	ilur
+之切	ilus
 之妻	ilus
 之气	ilut
 诌	ilw
@@ -41182,9 +41179,9 @@ GPRS	gprs
 谵	ilwh
 之味	ilwi
 杂乱无章	ilwi
-之我见	ilwj
-证伪	ilwj
 诸位	ilwj
+证伪	ilwj
+之我见	ilwj
 祗	ilwk
 之谓	ilwl
 指鹿为马	ilwm
@@ -41198,14 +41195,14 @@ GPRS	gprs
 再立新功	ilxg
 朝令夕改	ilxg
 证型	ilxg
-之效	ilxh
 之需	ilxh
+之效	ilxh
 指令性计划	ilxh
 直立行走	ilxi
 蚤休	ilxj
 之行	ilxk
-之心	ilxl
 祖训	ilxl
+之心	ilxl
 之学	ilxn
 之小	ilxp
 之星	ilxr
@@ -41451,10 +41448,10 @@ GPRS	gprs
 糟践	imji
 总价	imjj
 炸街	imjk
-总教练	imjl
-总经理	imjl
 总计	imjl
 炸鸡	imjl
+总经理	imjl
+总教练	imjl
 炸酱面	imjm
 总觉	imjn
 灼见	imjo
@@ -41481,13 +41478,12 @@ GPRS	gprs
 着陆点	imld
 芝麻绿豆	imld
 着落	imle
-尊老	imlf
 总理府	imlf
 珠穆朗玛峰	imlf
 总理	imlg
 总领馆	imlg
-州立	imlh
 着凉	imlh
+州立	imlh
 着哩	imli
 总揽	imlk
 䎖	imll
@@ -41533,9 +41529,9 @@ GPRS	gprs
 曾	imr
 致命弱点	imrd
 尊荣	imre
-总人口	imrk
-灼热	imrk
 燥热	imrk
+灼热	imrk
+总人口	imrk
 尊容	imrn
 曾	imrr
 总人数	imrs
@@ -41543,14 +41539,14 @@ GPRS	gprs
 甑	ims
 炸死	imsa
 燥湿	imsd
-宗庙社稷	imsj
+炸伤	imsj
 总书记	imsj
 灼伤	imsj
-炸伤	imsj
+宗庙社稷	imsj
 着手	imsk
 总司令	imsl
-总说	imsl
 灶神	imsl
+总说	imsl
 总数	imsm
 遵守	imsn
 总署	imso
@@ -41764,6 +41760,7 @@ GPRS	gprs
 字迹	injh
 字距	inji
 召集	injj
+字集	injj
 终南捷径	injj
 字据	injk
 祝你健康	injk
@@ -41858,8 +41855,8 @@ GPRS	gprs
 逐年下降	inxj
 宅心	inxl
 窄小	inxp
-灾星	inxr
 窒息	inxr
+灾星	inxr
 灾殃	inya
 子女玉帛	inyb
 字样	inyc
@@ -41907,7 +41904,6 @@ GPRS	gprs
 赠别	iobi
 中保	iobj
 中报	iobk
-则把	iobk
 睁不开	iobk
 则被	iobl
 置办	iobn
@@ -41962,8 +41958,8 @@ GPRS	gprs
 中低级	iodj
 中德	iodk
 则对	iodl
-中断	iodm
 账单	iodm
+中断	iodm
 赚大钱	iodq
 中段	iodr
 中东	iods
@@ -42139,8 +42135,8 @@ GPRS	gprs
 赚	iomk
 中牟	ioml
 中美	iomm
-瞩目	iomo
 账目	iomo
+瞩目	iomo
 赠	iomr
 嶒	iomr
 罾	iomr
@@ -42618,7 +42614,6 @@ GPRS	gprs
 早	irff
 照付	irfj
 追访	irfl
-照发	irfn
 自发	irfn
 自反	irfq
 自费生	irfs
@@ -42630,7 +42625,6 @@ GPRS	gprs
 追风	irfw
 自发性	irfx
 自缚	irfx
-照发	irfz
 自发	irfz
 照顾	irga
 追根	irgc
@@ -42655,8 +42649,8 @@ GPRS	gprs
 自豪	irhh
 皂化	irhj
 照护	irhk
-最恨	irhn
 追悔	irhn
+最恨	irhn
 追回	irho
 最后	irhq
 暲	irhr
@@ -42751,10 +42745,10 @@ GPRS	gprs
 自留地	irld
 最老	irlf
 自理	irlg
-早恋	irlh
+自立	irlh
 照亮	irlh
 自恋	irlh
-自立	irlh
+早恋	irlh
 照例	irlj
 自流井	irlj
 自律	irlk
@@ -42883,8 +42877,8 @@ GPRS	gprs
 最疼	irth
 自叹	irti
 自投	irtk
-自通	irtl
 追讨	irtl
+自通	irtl
 追逃	irtm
 在人体内	irtn
 重如泰山	irts
@@ -42926,11 +42920,10 @@ GPRS	gprs
 早泄	irxd
 照相馆	irxg
 自选股	irxg
-招人稀罕	irxh
-昭雪	irxh
-最喜欢	irxh
-最小化	irxh
 最新	irxh
+最小化	irxh
+昭雪	irxh
+招人稀罕	irxh
 最小值	irxi
 追星族	irxi
 正人先正己	irxj
@@ -42958,9 +42951,9 @@ GPRS	gprs
 昨夜	iryh
 照应	iryh
 自喻	iryi
-照妖镜	iryj
 照耀	iryj
 自愈	iryj
+照妖镜	iryj
 自语	iryl
 自养	irym
 追忆	iryn
@@ -43171,8 +43164,8 @@ GPRS	gprs
 转账	isio
 早睡早起	isiq
 转自	isir
-姊姊	isis
 辗转	isis
+姊姊	isis
 只手遮天	isit
 辎重	isit
 早睡早起	isiu
@@ -43190,9 +43183,9 @@ GPRS	gprs
 转交	isjh
 增收节支	isji
 轴距	isji
+至今	isjj
 暂借	isjj
 直抒己见	isjj
-至今	isjj
 转接	isjk
 遵守纪律	isjl
 转寄	isjn
@@ -43518,8 +43511,8 @@ GPRS	gprs
 制度	itdh
 志同道合	itdh
 竹筒倒豆子	itdi
-乍得	itdk
 重担	itdk
+乍得	itdk
 制订	itdl
 知道	itdm
 制定	itdn
@@ -43542,7 +43535,6 @@ GPRS	gprs
 制法	itfd
 知府	itfh
 制伏	itfj
-毡房	itfl
 租房	itfl
 造访	itfl
 制粉	itfm
@@ -43627,8 +43619,8 @@ GPRS	gprs
 竹节	itje
 筑基	itjf
 长进	itjg
-制剂	itjh
 造就	itjh
+制剂	itjh
 雉	itjh
 造价	itjj
 造假	itjj
@@ -43707,8 +43699,8 @@ GPRS	gprs
 智囊	itnf
 智能化	itnh
 智能卡	itnk
-怎能	itnl
 智能	itnl
+怎能	itnl
 迮	itnn
 乍暖	itnr
 稚嫩	itns
@@ -43769,9 +43761,9 @@ GPRS	gprs
 知事	itsf
 智商	itsh
 知识化	itsh
-知识界	itsj
 赞赏	itsj
 重伤	itsj
+知识界	itsj
 知识库	itsk
 长势	itsk
 知识	itsl
@@ -43791,7 +43783,6 @@ GPRS	gprs
 种上	itsy
 竹	itt
 笮	ittd
-乍听	itti
 赞叹	itti
 篆体	ittj
 秩	ittk
@@ -43817,8 +43808,8 @@ GPRS	gprs
 知情权	ituq
 知其然	itur
 知情人	itur
-稚气	itut
 竹签	itut
+稚气	itut
 竹蜻蜓	itut
 制	ituu
 劄	ituu
@@ -43842,6 +43833,7 @@ GPRS	gprs
 种系	itxe
 造型	itxg
 重型	itxg
+乍现	itxg
 秩序	itxh
 长兄	itxi
 纂修	itxj
@@ -43873,9 +43865,9 @@ GPRS	gprs
 长一智	ityi
 乍一看	ityk
 赞扬	ityk
-在天有灵	ityl
-造诣	ityl
 造谣	ityl
+造诣	ityl
+在天有灵	ityl
 种养	itym
 赞誉	ityn
 竹园	ityo
@@ -43979,6 +43971,7 @@ GPRS	gprs
 走低	iudj
 走掉	iudk
 走读	iudl
+走调	iudl
 争权夺利	iudl
 紫气东来	iudl
 走道	iudm
@@ -44051,14 +44044,12 @@ GPRS	gprs
 增加	iujn
 走近	iujq
 证券交易所	iujs
-赵婧	iujs
-赵嘉	iuju
 趑趄	iuju
 证券交易	iujy
 增加	iujz
+走开	iukg
 增刊	iukg
 增开	iukg
-走开	iukg
 凿刻	iukh
 中秋快乐	iukl
 增快	iukn
@@ -44112,8 +44103,8 @@ GPRS	gprs
 走私车	iusc
 真枪实弹	iusd
 走神儿	iuse
-增速	iusf
 走散	iusf
+增速	iusf
 走私犯	iusf
 真情实感	iusg
 中气十足	iusi
@@ -44126,7 +44117,6 @@ GPRS	gprs
 走兽	iusm
 走时	iusr
 增生	iust
-走势图	iust
 走失	iust
 走私	iust
 志士	iusu
@@ -44364,8 +44354,8 @@ GPRS	gprs
 胀	ivt
 胙	ivtd
 阼	ivtd
-肿痛	ivth
 阵痛	ivth
+肿痛	ivth
 肢体	ivtj
 孜	ivtk
 孜	ivtm
@@ -44600,8 +44590,8 @@ GPRS	gprs
 杂品	iwpi
 自我膨胀	iwpi
 杂牌军	iwpj
-猪扒	iwpk
 猪排	iwpk
+猪扒	iwpk
 猪皮	iwpn
 自我批评	iwpp
 杂牌	iwpr
@@ -44698,10 +44688,10 @@ GPRS	gprs
 座无虚席	iwxx
 周一	iwyd
 周游	iwyd
-争艳	iwyg
 周瑜	iwyg
-旨意	iwyh
+争艳	iwyg
 杂音	iwyh
+旨意	iwyh
 飐	iwyi
 争优	iwyj
 杂役	iwyk
@@ -44843,8 +44833,8 @@ GPRS	gprs
 组合柜	ixhg
 综合征	ixhi
 综合症	ixhi
-组合	ixhj
 综合	ixhj
+组合	ixhj
 注销户口	ixhk
 秩序混乱	ixhl
 纸鹤	ixhl
@@ -44883,9 +44873,9 @@ GPRS	gprs
 终极	ixjc
 纵酒	ixjd
 专项经费	ixjf
+骤减	ixjh
 终将	ixjh
 骓	ixjh
-骤减	ixjh
 终结者	ixji
 组件	ixjj
 在线监控	ixjk
@@ -44913,8 +44903,8 @@ GPRS	gprs
 组里	ixlo
 忠孝两全	ixlq
 纸篓	ixlt
-忠孝两全	ixlu
 纵览	ixlu
+忠孝两全	ixlu
 综览	ixlu
 终了	ixlv
 驻留	ixlw
@@ -44993,6 +44983,8 @@ GPRS	gprs
 终岁	ixso
 在线视频	ixsp
 终身	ixsr
+纵身	ixsr
+纵是	ixsr
 终生	ixst
 纵声	ixsu
 真心实意	ixsy
@@ -45003,8 +44995,8 @@ GPRS	gprs
 骤停	ixtj
 暂行条例	ixtl
 纸头	ixtn
-纸团	ixto
 组团	ixto
+纸团	ixto
 组图	ixto
 纸筒	ixtt
 纸条	ixtw
@@ -45099,9 +45091,8 @@ GPRS	gprs
 桌板	iybc
 桌椅板凳	iybd
 铸币	iybe
-战表	iybg
-战败国	iybg
 钟表	iybg
+战败国	iybg
 直言不讳	iybh
 止不住	iybi
 占卜	iybj
@@ -45261,8 +45252,8 @@ GPRS	gprs
 止境	iyju
 针脚	iyjv
 针灸	iyjw
-卓绝	iyjx
 战绩	iyjx
+卓绝	iyjx
 紫金	iyjy
 专业课程	iykc
 止渴	iykd
@@ -45281,7 +45272,6 @@ GPRS	gprs
 战栗	iylf
 占理	iylg
 周游列国	iylg
-卓立	iylh
 锃亮	iylh
 龇牙咧嘴	iyli
 占领	iylj
@@ -45356,9 +45346,9 @@ GPRS	gprs
 紫砂	iysa
 钻石	iysa
 战术笔	iysb
-仗义疏财	iysc
 战术	iysc
 紫杉	iysc
+仗义疏财	iysc
 止水	iysd
 置于死地	iysd
 紫苏	iyse
@@ -45445,8 +45435,8 @@ GPRS	gprs
 知易行难	iyxn
 锱	iyxo
 紫	iyxp
-占星	iyxr
 止血	iyxr
+占星	iyxr
 占星术	iyxs
 镇邪	iyxs
 占先	iyxt
@@ -45534,6 +45524,7 @@ GPRS	gprs
 召	izi
 召	izii
 召集	izjj
+字集	izjj
 召见	izjo
 召集人	izjr
 召妓	izjs
@@ -45686,14 +45677,12 @@ GPRS	gprs
 居高	jbgh
 居官	jbgn
 建国	jbgo
-即告	jbgt
 尽管	jbgt
 既给	jbgx
 建湖	jbhd
 拒不悔改	jbhg
 金碧辉煌	jbhh
 弶	jbhi
-即会	jbhj
 建行	jbhk
 忌讳	jbhl
 君火	jbhm
@@ -45722,6 +45711,7 @@ GPRS	gprs
 饥不择食	jbis
 建筑	jbit
 建造	jbit
+局长	jbit
 居住区	jbiu
 剧增	jbiu
 君子	jbiv
@@ -45731,7 +45721,6 @@ GPRS	gprs
 即将	jbjh
 建交	jbjh
 精兵简政	jbji
-即今	jbjj
 居间	jbjj
 建军节	jbjj
 建军	jbjl
@@ -45868,7 +45857,6 @@ GPRS	gprs
 尽头	jbtn
 剧团	jbto
 剧透	jbtt
-剧坛	jbtu
 疆土	jbtu
 剧	jbu
 居奇	jbua
@@ -45951,9 +45939,9 @@ GPRS	gprs
 建筑师	jbzs
 建造师	jbzs
 饥不择食	jbzs
-局长	jbzt
 建筑	jbzt
 建造	jbzt
+局长	jbzt
 剧增	jbzu
 居住区	jbzu
 君子	jbzv
@@ -46032,8 +46020,8 @@ GPRS	gprs
 机电	jcdo
 机场大厅	jcdt
 极短	jcdt
-极地	jcdu
 禁地	jcdu
+极地	jcdu
 极多	jcdw
 机动性	jcdx
 极点	jcdy
@@ -46099,7 +46087,6 @@ GPRS	gprs
 检字	jcin
 机中	jcio
 极致	jcis
-机制	jcit
 机智	jcit
 桔子	jciv
 橘子	jciv
@@ -46208,9 +46195,8 @@ GPRS	gprs
 极爽	jcsa
 柜	jcsc
 极深	jcsd
-几次三番	jcsf
-极速	jcsf
 检索	jcsf
+极速	jcsf
 夹藏私货	jcsh
 精诚所至	jcsi
 禁食	jcsj
@@ -46316,9 +46302,9 @@ GPRS	gprs
 机遇期	jcyu
 椒盐	jcyu
 禁用	jcyw
+检验	jcyx
 机缘	jcyx
 校验	jcyx
-检验	jcyx
 检验员	jcyy
 检疫站	jcyz
 枷	jcz
@@ -46334,7 +46320,6 @@ GPRS	gprs
 检字	jczn
 机中	jczo
 极致	jczs
-机制	jczt
 机智	jczt
 桔子	jczv
 橘子	jczv
@@ -46352,10 +46337,9 @@ GPRS	gprs
 酒杯	jdbc
 胶东半岛	jdbd
 见多不怪	jdbg
-巨大变化	jdbh
 渐变	jdbh
-激变	jdbh
 激辩	jdbh
+激变	jdbh
 酒吧	jdbi
 酒保	jdbj
 酒吧间	jdbj
@@ -46368,7 +46352,6 @@ GPRS	gprs
 江北	jdby
 激动不已	jdby
 江边	jdbz
-渐成	jdca
 酒厂	jdca
 降低成本	jdcb
 酒菜	jdce
@@ -46577,8 +46560,8 @@ GPRS	gprs
 酒钱	jdqy
 激	jdr
 渐弱	jdrb
-洎	jdrd
 浸润	jdrd
+洎	jdrd
 激惹	jdre
 渐入	jdrm
 酒肉	jdro
@@ -47207,8 +47190,8 @@ GPRS	gprs
 教唆	jfsi
 教书匠	jfsj
 教师节	jfsj
-戬	jfsk
 教授	jfsk
+戬	jfsk
 棘手	jfsk
 解放生产力	jfsl
 久负盛名	jfsm
@@ -50247,7 +50230,6 @@ GPRS	gprs
 惊	jnh
 加厚	jnha
 惊鸿	jnhd
-纪念活动	jnhd
 惊魂	jnhg
 惊呼	jnhi
 謇	jnhi
@@ -51276,7 +51258,6 @@ GPRS	gprs
 姣	jsh
 娇憨	jshb
 奸滑	jshd
-竞赛活动	jshd
 精神焕发	jshf
 借尸还魂	jshh
 精神恍忽	jshh
@@ -53631,8 +53612,8 @@ GPRS	gprs
 钜献	jyxf
 锦西	jyxf
 镜像	jyxj
-金像	jyxj
 金像奖	jyxj
+金像	jyxj
 金星	jyxr
 镜匣	jyxs
 锦秀	jyxt
@@ -54083,7 +54064,6 @@ GPRS	gprs
 看不过去	kbgq
 阔步高谈	kbgt
 看不过去	kbgu
-恐怖活动	kbhd
 垦荒	kbhe
 口碑很好	kbhh
 垦殖	kbia
@@ -55439,7 +55419,6 @@ GPRS	gprs
 科技攻关	kjgg
 苦尽甘来	kjgl
 伉	kjh
-科技活动	kjhd
 会计核算	kjhs
 闶	kjhw
 侃	kji
@@ -56934,7 +56913,6 @@ GPRS	gprs
 狂	kwg
 狂	kwgd
 狂歌	kwgf
-课外活动	kwhd
 狂吼	kwhi
 狂呼	kwhi
 狂欢节	kwhj
@@ -69953,10 +69931,10 @@ GPRS	gprs
 女职工	nsig
 女装	nsih
 女主	nsih
-努嘴	nsii
-女贞子	nsii
-女足	nsii
 奶嘴	nsii
+努嘴	nsii
+女足	nsii
+女贞子	nsii
 女主角	nsij
 娘子军	nsij
 女主内	nsin
@@ -70160,8 +70138,9 @@ GPRS	gprs
 女真	nszf
 女职工	nszg
 女装	nszh
-女足	nszi
 奶嘴	nszi
+努嘴	nszi
+女足	nszi
 女主角	nszj
 娘子军	nszj
 女主内	nszn
@@ -70229,8 +70208,8 @@ GPRS	gprs
 黏糊糊	nthh
 年号	nthi
 年会	nthj
-年华	nthj
 年货	nthj
+年华	nthj
 黏合剂	nthj
 黏糊	nthm
 年后	nthq
@@ -97254,7 +97233,6 @@ GPRS	gprs
 皮包骨头	pbgt
 屁股	pbgv
 譬	pbh
-评比活动	pbhd
 辟	pbhf
 譬	pbhi
 屁话	pbhl
@@ -97973,7 +97951,6 @@ GPRS	gprs
 平湖	phhd
 平滑	phhd
 平衡点	phhd
-破坏活动	phhd
 旁	phhe
 噗哈哈哈	phhh
 平滑肌	phhj
@@ -99375,6 +99352,7 @@ GPRS	gprs
 蟛	pouq
 赔钱	pouy
 盼望	powh
+螵蛸	poxo
 赔笑	poxt
 螃蟹	poxw
 帔	poz
@@ -100021,7 +99999,6 @@ GPRS	gprs
 骠	pxf
 缥	pxfg
 骗过	pxgf
-评选活动	pxhd
 骗回	pxho
 骗婚	pxhs
 偏向虎山行	pxhx
@@ -100987,10 +100964,10 @@ GPRS	gprs
 清代	qddj
 取得贷款	qddk
 强大动力	qddl
+渠道	qddm
 清单	qddm
 清炖	qddm
 清道	qddm
-渠道	qddm
 潜到	qdds
 汽笛	qddt
 穷得叮当响	qddx
@@ -102456,9 +102433,8 @@ GPRS	gprs
 情景交融	qjjr
 全境	qjju
 俏	qjjv
-企及	qjjw
-倾角	qjjw
 全角	qjjw
+企及	qjjw
 全局性	qjjx
 勤俭节约	qjjy
 全开	qjkg
@@ -110057,6 +110033,8 @@ QQ密码	qqmm
 速效	sfxh
 世兄	sfxi
 散仙	sfxj
+束脩	sfxj
+束修	sfxj
 肆行	sfxk
 散心	sfxl
 索性	sfxn
@@ -111222,7 +111200,6 @@ QQ密码	qqmm
 裳	sjh
 升级换代	sjhd
 售汇	sjhd
-社交活动	sjhd
 赏花	sjhe
 侍魂	sjhg
 三句话不离本行	sjhh
@@ -112140,7 +112117,6 @@ QQ密码	qqmm
 双轨制	slgz
 谇	slh
 说来话长	slhc
-生理活动	slhd
 神汉	slhd
 诗画	slhd
 双花	slhe
@@ -116067,7 +116043,6 @@ QQ密码	qqmm
 色鬼	swgr
 甩锅	swgy
 生物合成	swhc
-涉外活动	swhd
 色环	swhg
 狮吼	swhi
 十万火急	swhj
@@ -121546,6 +121521,7 @@ QQ密码	qqmm
 腿法	tvfd
 腾房	tvfl
 腾飞	tvfn
+脱发	tvfn
 腾飞	tvfz
 脱光	tvgj
 腾格里	tvgl
@@ -122010,7 +121986,6 @@ QQ密码	qqmm
 铁锅	tygy
 铁灰	tyha
 天涯何处无芳草	tyhc
-体育活动	tyhd
 铁汉	tyhd
 铁环	tyhg
 太阳黑子	tyhi
@@ -122890,10 +122865,10 @@ QQ密码	qqmm
 清代	uddj
 取得贷款	uddk
 强大动力	uddl
+渠道	uddm
 清单	uddm
 清炖	uddm
 清道	uddm
-渠道	uddm
 潜到	udds
 汽笛	uddt
 青岛大学	uddx
@@ -124340,8 +124315,8 @@ QQ密码	qqmm
 情景交融	ujjr
 全境	ujju
 俏	ujjv
+全角	ujjw
 企及	ujjw
-倾角	ujjw
 全局性	ujjx
 勤俭节约	ujjy
 全开	ujkg
@@ -128398,7 +128373,6 @@ Z	vyz
 万分感谢	wfgx
 五个月	wfgy
 五湖	wfhd
-违法活动	wfhd
 五胡	wfhf
 五环	wfhg
 五号	wfhi
@@ -128671,8 +128645,9 @@ Z	vyz
 王冠	wggl
 无关	wggm
 王宫	wggn
-王国	wggo
 顽固	wggo
+无果	wggo
+王国	wggo
 顽固派	wggp
 无轨	wggs
 王国惟	wggw
@@ -129596,7 +129571,6 @@ Z	vyz
 倭瓜	wjgq
 危急关头	wjgt
 位	wjh
-外交活动	wjhd
 问号	wjhi
 问候	wjhj
 问话	wjhl
@@ -130996,7 +130970,6 @@ Z	vyz
 为时过早	wsgz
 我思故我在	wsgz
 王孙公子	wsgz
-外事活动	wshd
 万花	wshe
 万户侯	wshh
 娃哈哈	wshh
@@ -131268,7 +131241,6 @@ Z	vyz
 维特根斯坦	wtgt
 舞钢	wtgy
 我还	wtha
-文体活动	wthd
 稳获	wthe
 物耗	wthg
 委会	wthj
@@ -133988,8 +133960,8 @@ Z	vyz
 项坠	xfzv
 下周	xfzw
 巷战	xfzy
-形	xg
 现	xg
+形	xg
 刑	xg
 契	xga
 砉	xgai
@@ -135606,7 +135578,6 @@ Z	vyz
 先来后到	xlhd
 心海	xlhd
 心湖	xlhd
-心理活动	xlhd
 心花	xlhe
 心魂	xlhg
 熊孩子	xlhi
@@ -136628,12 +136599,13 @@ Z	vyz
 小吃部	xpcb
 小村	xpcc
 小吃店	xpcd
-小草	xpce
 小菜	xpce
+小草	xpce
 小春	xpcg
 小产	xpch
-小册子	xpci
 小吃	xpci
+小册子	xpci
+小长假	xpcj
 小吃街	xpcj
 小撮	xpck
 小词	xpcl
@@ -137500,7 +137472,6 @@ Z	vyz
 嫌贵	xsgo
 学生公寓	xsgy
 厢式货车	xshc
-学术活动	xshd
 心神恍惚	xshh
 消食和中	xshi
 小事化了	xshl
@@ -138368,7 +138339,6 @@ Z	vyz
 狭管	xwgt
 狭	xwh
 鳕	xwhb
-校外活动	xwhd
 鲜活	xwhd
 系花	xwhe
 鲜花	xwhe
@@ -143727,7 +143697,6 @@ Z	vyz
 又给	ylgx
 裕固族	ylgz
 谚	ylh
-娱乐活动	ylhd
 翌	ylhd
 语汇	ylhd
 又获	ylhe
@@ -146862,9 +146831,8 @@ Z	vyz
 阳物	yvwt
 院外	yvww
 胰腺癌	yvxa
-腌咸菜	yvxc
-臆想	yvxc
 院校	yvxc
+臆想	yvxc
 月薪	yvxe
 腋下	yvxf
 隐形	yvxg
@@ -151884,9 +151852,9 @@ Z	vyz
 祝福语	zlfy
 之感	zlga
 诸葛	zlge
+之歌	zlgf
 之功	zlgf
 之故	zlgf
-之歌	zlgf
 之高	zlgh
 之光	zlgj
 证供	zlgj
@@ -151971,14 +151939,14 @@ Z	vyz
 祝酒歌	zljg
 翟	zljh
 证监会	zljh
-之间	zljj
 证件	zljj
+之间	zljj
 证据	zljk
 之计	zljl
 之家	zljn
 之见	zljo
-袗	zljq
 诊	zljq
+袗	zljq
 之巨	zljs
 祖籍	zljt
 之境	zlju
@@ -152112,8 +152080,8 @@ Z	vyz
 祚	zltd
 之痛	zlth
 之叹	zlti
-之体	zltj
 崭露头角	zltj
+之体	zltj
 诛	zltk
 之谈	zltl
 之强	zlub
@@ -152138,9 +152106,9 @@ Z	vyz
 之王	zlwg
 谵	zlwh
 之味	zlwi
-之我见	zlwj
-证伪	zlwj
 诸位	zlwj
+证伪	zlwj
+之我见	zlwj
 祗	zlwk
 之谓	zlwl
 指鹿为马	zlwm
@@ -152157,8 +152125,8 @@ Z	vyz
 再立新功	zlxg
 朝令夕改	zlxg
 证型	zlxg
-之效	zlxh
 之需	zlxh
+之效	zlxh
 指令性计划	zlxh
 蚤休	zlxj
 之行	zlxk
@@ -152410,10 +152378,10 @@ Z	vyz
 糟践	zmji
 总价	zmjj
 炸街	zmjk
-总教练	zmjl
-总经理	zmjl
 总计	zmjl
 炸鸡	zmjl
+总经理	zmjl
+总教练	zmjl
 炸酱面	zmjm
 总觉	zmjn
 灼见	zmjo
@@ -152440,13 +152408,12 @@ Z	vyz
 着陆点	zmld
 芝麻绿豆	zmld
 着落	zmle
-尊老	zmlf
 总理府	zmlf
 珠穆朗玛峰	zmlf
 总理	zmlg
 总领馆	zmlg
-州立	zmlh
 着凉	zmlh
+州立	zmlh
 着哩	zmli
 总揽	zmlk
 䎖	zmll
@@ -152492,9 +152459,9 @@ Z	vyz
 曾	zmr
 致命弱点	zmrd
 尊荣	zmre
-总人口	zmrk
-灼热	zmrk
 燥热	zmrk
+灼热	zmrk
+总人口	zmrk
 尊容	zmrn
 曾	zmrr
 总人数	zmrs
@@ -152503,14 +152470,14 @@ Z	vyz
 甑	zms
 炸死	zmsa
 燥湿	zmsd
-宗庙社稷	zmsj
+炸伤	zmsj
 总书记	zmsj
 灼伤	zmsj
-炸伤	zmsj
+宗庙社稷	zmsj
 着手	zmsk
 总司令	zmsl
-总说	zmsl
 灶神	zmsl
+总说	zmsl
 总数	zmsm
 遵守	zmsn
 总署	zmso
@@ -152802,8 +152769,8 @@ Z	vyz
 逐年下降	znxj
 宅心	znxl
 窄小	znxp
-灾星	znxr
 窒息	znxr
+灾星	znxr
 灾殃	znya
 子女玉帛	znyb
 字样	znyc
@@ -152850,7 +152817,6 @@ Z	vyz
 赠别	zobi
 中保	zobj
 中报	zobk
-则把	zobk
 睁不开	zobk
 则被	zobl
 置办	zobn
@@ -152904,8 +152870,8 @@ Z	vyz
 中低级	zodj
 中德	zodk
 则对	zodl
-中断	zodm
 账单	zodm
+中断	zodm
 赚大钱	zodq
 中段	zodr
 中东	zods
@@ -153103,8 +153069,8 @@ Z	vyz
 赚	zomk
 中牟	zoml
 中美	zomm
-瞩目	zomo
 账目	zomo
+瞩目	zomo
 赠	zomr
 嶒	zomr
 罾	zomr
@@ -153602,8 +153568,8 @@ Z	vyz
 自豪	zrhh
 皂化	zrhj
 照护	zrhk
-最恨	zrhn
 追悔	zrhn
+最恨	zrhn
 追回	zrho
 最后	zrhq
 暲	zrhr
@@ -153716,10 +153682,10 @@ Z	vyz
 自留地	zrld
 最老	zrlf
 自理	zrlg
-早恋	zrlh
+自立	zrlh
 照亮	zrlh
 自恋	zrlh
-自立	zrlh
+早恋	zrlh
 照例	zrlj
 自流井	zrlj
 自律	zrlk
@@ -153891,11 +153857,10 @@ Z	vyz
 早泄	zrxd
 照相馆	zrxg
 自选股	zrxg
+最新	zrxh
+最小化	zrxh
 招人稀罕	zrxh
 昭雪	zrxh
-最喜欢	zrxh
-最小化	zrxh
-最新	zrxh
 最响	zrxi
 正人先正己	zrxj
 照相机	zrxj
@@ -153924,9 +153889,9 @@ Z	vyz
 昨夜	zryh
 照应	zryh
 自喻	zryi
-照妖镜	zryj
 照耀	zryj
 自愈	zryj
+照妖镜	zryj
 自语	zryl
 自养	zrym
 追忆	zryn
@@ -154148,9 +154113,9 @@ Z	vyz
 至交	zsjh
 转交	zsjh
 轴距	zsji
+至今	zsjj
 暂借	zsjj
 直抒己见	zsjj
-至今	zsjj
 转接	zsjk
 遵守纪律	zsjl
 转寄	zsjn
@@ -154399,8 +154364,8 @@ Z	vyz
 转账	zszo
 早睡早起	zszq
 转自	zszr
-姊姊	zszs
 辗转	zszs
+姊姊	zszs
 只手遮天	zszt
 辎重	zszt
 早睡早起	zszu
@@ -154475,8 +154440,8 @@ Z	vyz
 制动	ztdg
 制度	ztdh
 志同道合	ztdh
-乍得	ztdk
 重担	ztdk
+乍得	ztdk
 制订	ztdl
 知道	ztdm
 制定	ztdn
@@ -154500,7 +154465,6 @@ Z	vyz
 制法	ztfd
 知府	ztfh
 制伏	ztfj
-毡房	ztfl
 租房	ztfl
 造访	ztfl
 制粉	ztfm
@@ -154601,8 +154565,8 @@ Z	vyz
 竹节	ztje
 筑基	ztjf
 长进	ztjg
-制剂	ztjh
 造就	ztjh
+制剂	ztjh
 雉	ztjh
 造价	ztjj
 造假	ztjj
@@ -154683,8 +154647,8 @@ Z	vyz
 智囊	ztnf
 智能化	ztnh
 智能卡	ztnk
-怎能	ztnl
 智能	ztnl
+怎能	ztnl
 迮	ztnn
 乍暖	ztnr
 稚嫩	ztns
@@ -154720,8 +154684,8 @@ Z	vyz
 知情权	ztqq
 知其然	ztqr
 知情人	ztqr
-稚气	ztqt
 竹签	ztqt
+稚气	ztqt
 竹蜻蜓	ztqt
 知情权	ztqu
 知趣	ztqu
@@ -154747,9 +154711,9 @@ Z	vyz
 知事	ztsf
 智商	ztsh
 知识化	ztsh
-知识界	ztsj
 赞赏	ztsj
 重伤	ztsj
+知识界	ztsj
 知识库	ztsk
 长势	ztsk
 知识	ztsl
@@ -154769,7 +154733,6 @@ Z	vyz
 种上	ztsy
 竹	ztt
 笮	zttd
-乍听	ztti
 赞叹	ztti
 篆体	zttj
 秩	zttk
@@ -154821,6 +154784,7 @@ Z	vyz
 种系	ztxe
 造型	ztxg
 重型	ztxg
+乍现	ztxg
 秩序	ztxh
 长兄	ztxi
 纂修	ztxj
@@ -154849,9 +154813,9 @@ Z	vyz
 竹叶	ztyi
 乍一看	ztyk
 赞扬	ztyk
-在天有灵	ztyl
-造诣	ztyl
 造谣	ztyl
+造诣	ztyl
+在天有灵	ztyl
 种养	ztym
 赞誉	ztyn
 竹园	ztyo
@@ -154947,6 +154911,8 @@ Z	vyz
 紫气东来	zudl
 走读	zudl
 走调	zudl
+争权夺利	zudl
+紫气东来	zudl
 走道	zudm
 走到	zuds
 走读生	zuds
@@ -155022,14 +154988,12 @@ Z	vyz
 增加	zujn
 走近	zujq
 证券交易所	zujs
-赵婧	zujs
-赵嘉	zuju
 趑趄	zuju
 证券交易	zujy
 增加值	zujz
+走开	zukg
 增刊	zukg
 增开	zukg
-走开	zukg
 凿刻	zukh
 中秋快乐	zukl
 增快	zukn
@@ -155084,9 +155048,10 @@ Z	vyz
 走私车	zusc
 真枪实弹	zusd
 走神儿	zuse
-增速	zusf
 走散	zusf
+增速	zusf
 走私犯	zusf
+增速	zusf
 真情实感	zusg
 增塑剂	zusj
 走势	zusk
@@ -155097,7 +155062,6 @@ Z	vyz
 走兽	zusm
 走时	zusr
 增生	zust
-走势图	zust
 走失	zust
 走私	zust
 志士	zusu
@@ -155331,8 +155295,8 @@ Z	vyz
 胀	zvt
 胙	zvtd
 阼	zvtd
-肿痛	zvth
 阵痛	zvth
+肿痛	zvth
 肢体	zvtj
 孜	zvtk
 孜	zvtm
@@ -155573,8 +155537,8 @@ Z	vyz
 掌握平衡	zwph
 杂品	zwpi
 杂牌军	zwpj
-猪扒	zwpk
 猪排	zwpk
+猪扒	zwpk
 猪皮	zwpn
 自我批评	zwpp
 杂牌	zwpr
@@ -155673,10 +155637,10 @@ Z	vyz
 座无虚席	zwxx
 周一	zwyd
 周游	zwyd
-争艳	zwyg
 周瑜	zwyg
-旨意	zwyh
+争艳	zwyg
 杂音	zwyh
+旨意	zwyh
 飐	zwyi
 争优	zwyj
 杂役	zwyk
@@ -155811,8 +155775,8 @@ Z	vyz
 纵火犯	zxhf
 组合柜	zxhg
 综合征	zxhi
-组合	zxhj
 综合	zxhj
+组合	zxhj
 注销户口	zxhk
 秩序混乱	zxhl
 纸鹤	zxhl
@@ -155856,9 +155820,9 @@ Z	vyz
 终极	zxjc
 纵酒	zxjd
 专项经费	zxjf
+骤减	zxjh
 终将	zxjh
 骓	zxjh
-骤减	zxjh
 组件	zxjj
 在线监控	zxjk
 驻军	zxjl
@@ -155886,8 +155850,8 @@ Z	vyz
 组里	zxlo
 忠孝两全	zxlq
 纸篓	zxlt
-忠孝两全	zxlu
 纵览	zxlu
+忠孝两全	zxlu
 综览	zxlu
 终了	zxlv
 驻留	zxlw
@@ -155964,9 +155928,9 @@ Z	vyz
 驻守	zxsn
 终岁	zxso
 在线视频	zxsp
-纵是	zxsr
-纵身	zxsr
 终身	zxsr
+纵身	zxsr
+纵是	zxsr
 直线上升	zxss
 终生	zxst
 纵声	zxsu
@@ -155979,8 +155943,8 @@ Z	vyz
 骤停	zxtj
 暂行条例	zxtl
 纸头	zxtn
-纸团	zxto
 组团	zxto
+纸团	zxto
 组图	zxto
 纸筒	zxtt
 纸条	zxtw
@@ -156072,8 +156036,8 @@ Z	vyz
 桌板	zybc
 桌椅板凳	zybd
 铸币	zybe
-战败国	zybg
 钟表	zybg
+战败国	zybg
 直言不讳	zybh
 占卜	zybj
 钟摆	zybk
@@ -156241,8 +156205,8 @@ Z	vyz
 止境	zyju
 针脚	zyjv
 针灸	zyjw
-卓绝	zyjx
 战绩	zyjx
+卓绝	zyjx
 紫金	zyjy
 专业课程	zykc
 止渴	zykd
@@ -156260,7 +156224,6 @@ Z	vyz
 战栗	zylf
 占理	zylg
 周游列国	zylg
-卓立	zylh
 锃亮	zylh
 占领	zylj
 占领军	zylj
@@ -156271,7 +156234,6 @@ Z	vyz
 占领区	zylq
 择优录取	zylq
 镇流器	zylq
-正言厉色	zyls
 正颜厉色	zyls
 战乱	zylt
 占领区	zylu
@@ -156335,9 +156297,9 @@ Z	vyz
 紫砂	zysa
 钻石	zysa
 战术笔	zysb
-仗义疏财	zysc
 战术	zysc
 紫杉	zysc
+仗义疏财	zysc
 止水	zysd
 置于死地	zysd
 紫苏	zyse
@@ -156424,8 +156386,8 @@ Z	vyz
 知易行难	zyxn
 锱	zyxo
 紫	zyxp
-占星	zyxr
 止血	zyxr
+占星	zyxr
 占星术	zyxs
 镇邪	zyxs
 占先	zyxt
