20240615-223319：对比到2000行；修改symbols中的dn符号。

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -46446,6 +46446,7 @@ GPRS	gprs
 江左	jdia
 酒糟鼻	jdib
 江浙	jdid
+浸渍	jdid
 就地正法	jdif
 濈	jdif
 酒醉	jdif
@@ -47013,9 +47014,9 @@ GPRS	gprs
 聚到	jfds
 基督徒	jfdt
 基地	jfdu
-基点	jfdy
 基督	jfdy
 教导员	jfdy
+基点	jfdy
 鞯	jfe
 鞯	jfea
 酵	jff
@@ -47049,10 +47050,10 @@ GPRS	gprs
 救活	jfhd
 截获	jfhe
 截胡	jfhf
-教会	jfhj
-教化	jfhj
 聚会	jfhj
+教会	jfhj
 聚合	jfhj
+教化	jfhj
 救护	jfhk
 教诲	jfhl
 救火	jfhm
@@ -47064,11 +47065,13 @@ GPRS	gprs
 聚在	jfia
 疾风知劲草	jfic
 救治	jfid
+教职	jfif
+晋职	jfif
 聚酯	jfif
 教职工	jfig
+教主	jfih
 基准	jfih
 基站	jfih
-教主	jfih
 解放战争	jfii
 革	jfii
 聚众	jfij
@@ -47139,7 +47142,6 @@ GPRS	gprs
 教练	jflx
 教练员	jfly
 截面	jfma
-救民	jfmb
 教民	jfmb
 救命	jfmj
 酵母菌	jfmj
@@ -47232,7 +47234,6 @@ GPRS	gprs
 激发潜能	jfun
 教区	jfus
 墼	jfuu
-救起	jfuu
 期	jfv
 鄄	jfvv
 鞠	jfw
@@ -47407,9 +47408,7 @@ GPRS	gprs
 静海	jghd
 进化	jghj
 进货	jghj
-井欢	jghl
 进化论	jghl
-进户	jghl
 举国欢庆	jghq
 击毁	jghr
 举国欢腾	jght
@@ -47613,8 +47612,8 @@ GPRS	gprs
 进一步	jgyb
 技高一筹	jgyc
 节骨眼儿	jgye
-进言	jgyh
 静音	jgyh
+进言	jgyh
 借古喻今	jgyj
 机关用尽	jgyj
 建国以来	jgyl
@@ -47654,7 +47653,6 @@ GPRS	gprs
 颊	jhaj
 奖	jhak
 夹袄	jhal
-就爱	jham
 靖安	jhan
 夹岸	jhao
 决	jhb
@@ -47695,9 +47693,8 @@ GPRS	gprs
 减产	jhch
 决策者	jhci
 减仓	jhcj
-交叉口	jhck
-减持	jhck
 奖惩	jhck
+减持	jhck
 交叉	jhcl
 交差	jhcm
 决策人	jhcr
@@ -47717,9 +47714,8 @@ GPRS	gprs
 交代	jhdj
 减低	jhdj
 交待	jhdk
-交叠	jhdl
 决定论	jhdl
-将对	jhdl
+交叠	jhdl
 决断	jhdm
 决定	jhdn
 交电	jhdo
@@ -47751,7 +47747,6 @@ GPRS	gprs
 靖	jhg
 交感	jhga
 竟敢	jhgb
-交工	jhgf
 竣工	jhgf
 京广	jhgh
 计划赶不上变化	jhgh
@@ -47779,15 +47774,10 @@ GPRS	gprs
 江河湖海	jhhh
 减号	jhhi
 麖	jhhi
-交会	jhhj
-交合	jhhj
-交换机	jhhj
-交货	jhhj
-交辉	jhhj
-京华	jhhj
 净化	jhhj
-将会	jhhj
-竟会	jhhj
+交货	jhhj
+交换机	jhhj
+京华	jhhj
 交换	jhhk
 交欢	jhhl
 浆糊	jhhm
@@ -47847,8 +47837,8 @@ GPRS	gprs
 夹击	jhjg
 交际花	jhjh
 就叫	jhji
-交集	jhjj
 减价	jhjj
+交集	jhjj
 交接	jhjk
 竞技	jhjk
 将军	jhjl
@@ -47877,8 +47867,6 @@ GPRS	gprs
 交	jhk
 疾苦	jhke
 夹克	jhkf
-将可	jhkf
-就可	jhkf
 减亏	jhkg
 靖康	jhkh
 决口	jhki
@@ -47897,9 +47885,9 @@ GPRS	gprs
 交联	jhlf
 痉	jhlf
 脊梁骨	jhlg
-交流会	jhlh
 将来	jhlh
 痉挛	jhlh
+交流会	jhlh
 江湖郎中	jhli
 将领	jhlj
 鹡鸰	jhlj
@@ -48087,9 +48075,9 @@ GPRS	gprs
 交巡警	jhxj
 奖学金	jhxj
 就行	jhxk
-交心	jhxl
 决心	jhxl
 夹心	jhxl
+交心	jhxl
 就学	jhxn
 减小	jhxp
 交响曲	jhxq
@@ -48104,9 +48092,9 @@ GPRS	gprs
 驾鹤西游	jhxy
 景行行止	jhxz
 齑	jhy
+减压	jhya
 交友	jhya
 决议案	jhya
-减压	jhya
 就已	jhyb
 交椅	jhyc
 郊游	jhyd
@@ -48365,8 +48353,8 @@ GPRS	gprs
 旧识	jisl
 旧诗	jisl
 踞守	jisn
-喈	jisr
 跻身	jisr
+喈	jisr
 旧式	jiss
 嚼舌	jist
 叫声	jisu
@@ -48374,9 +48362,9 @@ GPRS	gprs
 叫上	jisy
 啾	jit
 君子坦荡荡	jitd
+践踏	jiti
 嗟叹	jiti
 旧体制	jiti
-践踏	jiti
 叫停	jitj
 啾	jitm
 噱头	jitn
@@ -48430,10 +48418,10 @@ GPRS	gprs
 近在眼前	jiyq
 旧业	jiyu
 近在眼前	jiyu
-君子以自强不息	jiyx
 旧约	jiyx
-紧张有序	jiyx
 践约	jiyx
+紧张有序	jiyx
+君子以自强不息	jiyx
 君子一言	jiyy
 金枝玉叶	jiyy
 跏	jiz
@@ -48486,9 +48474,7 @@ GPRS	gprs
 假唱	jjci
 仅从	jjcj
 僵持	jjck
-间操	jjck
 介词	jjcl
-仅差	jjcm
 集粹	jjcm
 今晨	jjcr
 拒绝承认	jjcr
@@ -48629,13 +48615,12 @@ GPRS	gprs
 集聚	jjjf
 借进	jjjg
 健将	jjjh
-价	jjji
-焦距	jjji
 间距	jjji
+焦距	jjji
+价	jjji
 佼佼者	jjji
 戒骄戒躁	jjji
 仅仅	jjjj
-俱佳	jjjj
 假借	jjjj
 将计就计	jjjj
 斤斤计较	jjjj
@@ -108364,13 +108349,11 @@ QQ密码	qqmm
 死前	saum
 盛情	saun
 死囚	sauo
-石泉	saur
 盛气	saut
 死去	sauu
 死翘翘	sauu
-石韦	sawg
-奢望	sawh
 死亡	sawh
+奢望	sawh
 少安毋躁	sawi
 稍安勿躁	sawi
 死亡率	sawl
@@ -112497,6 +112480,7 @@ QQ密码	qqmm
 双休日	slxr
 双向	slxr
 双学士	slxs
+说笑	slxt
 讪笑	slxt
 圣贤	slxu
 思来想去	slxu
